# matcha

./: README.md
matcha-core/: Cargo.toml
matcha-core/src/: advanced_orders.rs  engine.rs  lib.rs  market_data.rs  matching.rs  monitoring.rs  orderbook.rs  performance.rs  security.rs
matcha-core/src/tests/: mod.rs  performance_tests.rs
